# softraster

./: .clang-tidy  .gitignore  CMakeLists.txt  README  imgui.ini
scripts/: bar.bat  build.bat  build_db.bat  configure.bat  run.bat
src/: app.cpp  app.h  flying_camera_controller.cpp  flying_camera_controller.h  input.cpp  input.h  logger.cpp  logger.h  main.cpp  mesh.cpp  mesh.h  renderer.cpp  renderer.h  types.h
